k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-api-ingress
spec:
  rules:
    - host: hello.local
      http:
        paths:
          - path: /hello
            pathType: Prefix
            backend:
              service:
                name: hello-api
                port:
                  number: 80
